добавил реализованные проекты на главную

--- a/src/views/blocks/equipment.j2
+++ b/src/views/blocks/equipment.j2
@@ -1,7 +1,7 @@
 <section class="equipment section">
   <div class="container">
     <div class="equipment__content section__content">
-      <h2 class="equipment__title section__title">Оборудование</h2>
+      <h2 class="equipment__title section-title">Оборудование</h2>
       <ul class="equipment__big-cards">
         <li class="equipment__big-cards-item">
           <div class="equipment-card">
