--- a/src/scss/blocks/completed-projects.scss
+++ b/src/scss/blocks/completed-projects.scss
@@ -36,3 +36,17 @@
     grid-template-columns: repeat(2, 1fr);
   }
 }
+
+.completed-projects--index {
+  padding: 40px 0 30px 0;
+  margin: 0;
+  background: linear-gradient(180deg, #453fa9 0%, #675fc6 100%);
+
+  @media (min-width: $desktop-width) {
+  padding: 60px 0 70px 0;
+  }
+
+  & .completed-projects__title {
+    color: $white-color;
+  }
+}
