--- a/src/scss/blocks/reviews.scss
+++ b/src/scss/blocks/reviews.scss
@@ -219,3 +219,30 @@
     order: 1;
   }
 }
+
+.reviews--index {
+  padding: 40px 0;
+
+  @media (min-width: $desktop-width) {
+    position: relative;
+    padding: 80px 0;
+
+    &::before {
+      content: "";
+      position: absolute;
+      z-index: -1;
+      left: 0;
+      top: 0;
+      width: 100%;
+      height: 100%;
+      background-color: $bg2-color;
+      clip-path: polygon(0 0, 100% 0, 100% calc(100% - 175px), 60% 100%, 0 calc(100% - 380px));
+    }
+  }
+
+  & .reviews__letter {
+    @media (min-width: $desktop-width) {
+      background-color: transparent;
+    }
+  }
+}
