сделал секцию sharing-exp

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -66,3 +66,4 @@
 @import "./blocks/service-card.scss";
 @import "./blocks/services.scss";
 @import "./blocks/equipment.scss";
+@import "./blocks/sharing-exp.scss";
