--- a/src/views/pages/index.j2
+++ b/src/views/pages/index.j2
@@ -45,71 +45,72 @@
     </div>
   </section>
   <section class="reviews reviews--index">
-      <div class="container">
-        <div class="reviews__content">
-          <div class="reviews__header">
-            <h2 class="reviews__title title">Клиенты о нас</h2>
-            <a class="reviews__all-link next-link" href="reviews.html">
-              <span class="next-link__text">Все отзывы</span>
-            </a>
-          </div>
-          <ul class="reviews__list reviews__list--video">
-            <li class="reviews__item">
-              <div class="reviews__video-review">
-                <div class="reviews__video-container">
-                  <iframe class="reviews__video" src="https://www.youtube.com/embed/nSaFstyQQbs" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                </div>
-                <div class="reviews__video-about">
-                  <div class="reviews__video-person">
-                    <p class="reviews__video-person-name">Евгений Иванов</p>
-                    <p class="reviews__video-person-job">Директор Ascott Group</p>
-                  </div>
-                  <img class="reviews__video-company-logo" src="@img/svp-logo.png" alt="Логотип компании SVP">
-                </div>
-              </div>
-            </li>
-            <li class="reviews__item">
-              <div class="reviews__video-review">
-                <div class="reviews__video-container">
-                  <iframe class="reviews__video" src="https://www.youtube.com/embed/nSaFstyQQbs" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                </div>
-                <div class="reviews__video-about">
-                  <div class="reviews__video-person">
-                    <p class="reviews__video-person-name">Евгений Иванов</p>
-                    <p class="reviews__video-person-job">Директор Ascott Group</p>
-                  </div>
-                  <img class="reviews__video-company-logo" src="@img/svp-logo.png" alt="Логотип компании SVP">
-                </div>
-              </div>
-            </li>
-          </ul>
-          <ul class="reviews__list reviews__list--letter">
-            <li class="reviews__item">
-              <div class="reviews__letter">
-                <a class="reviews__letter-link" href="#!">
-                  <img class="reviews__letter-image" src="@img/review-letter.jpg" alt="">
-                </a>
-                <div class="reviews__letter-text-container">
-                  <img class="reviews__letter-company-logo" src="@img/spaarman-logo.png" alt="Логотип компании SVP">
-                  <p class="reviews__letter-text">Немецкая логистическая компания <b>C. Spaarmann GmbH</b> рекомендует команду Exasystems к сотрудничеству, которая произвела ее успешный переход на удаленный режим работы и снизила расходы на ИТ.</p>
-                </div>
-              </div>
-            </li>
-            <li class="reviews__item">
-              <div class="reviews__letter">
-                <a class="reviews__letter-link" href="#!">
-                  <img class="reviews__letter-image" src="@img/review-letter.jpg" alt="">
-                </a>
-                <div class="reviews__letter-text-container">
-                  <img class="reviews__letter-company-logo" src="@img/spaarman-logo.png" alt="Логотип компании SVP">
-                  <p class="reviews__letter-text">Немецкая логистическая компания <b>C. Spaarmann GmbH</b> рекомендует команду Exasystems к сотрудничеству, которая произвела ее успешный переход на удаленный режим работы и снизила расходы на ИТ.</p>
-                </div>
-              </div>
-            </li>
-          </ul>
+    <div class="container">
+      <div class="reviews__content">
+        <div class="reviews__header">
+          <h2 class="reviews__title title">Клиенты о нас</h2>
+          <a class="reviews__all-link next-link" href="reviews.html">
+            <span class="next-link__text">Все отзывы</span>
+          </a>
         </div>
+        <ul class="reviews__list reviews__list--video">
+          <li class="reviews__item">
+            <div class="reviews__video-review">
+              <div class="reviews__video-container">
+                <iframe class="reviews__video" src="https://www.youtube.com/embed/nSaFstyQQbs" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+              </div>
+              <div class="reviews__video-about">
+                <div class="reviews__video-person">
+                  <p class="reviews__video-person-name">Евгений Иванов</p>
+                  <p class="reviews__video-person-job">Директор Ascott Group</p>
+                </div>
+                <img class="reviews__video-company-logo" src="@img/svp-logo.png" alt="Логотип компании SVP">
+              </div>
+            </div>
+          </li>
+          <li class="reviews__item">
+            <div class="reviews__video-review">
+              <div class="reviews__video-container">
+                <iframe class="reviews__video" src="https://www.youtube.com/embed/nSaFstyQQbs" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+              </div>
+              <div class="reviews__video-about">
+                <div class="reviews__video-person">
+                  <p class="reviews__video-person-name">Евгений Иванов</p>
+                  <p class="reviews__video-person-job">Директор Ascott Group</p>
+                </div>
+                <img class="reviews__video-company-logo" src="@img/svp-logo.png" alt="Логотип компании SVP">
+              </div>
+            </div>
+          </li>
+        </ul>
+        <ul class="reviews__list reviews__list--letter">
+          <li class="reviews__item">
+            <div class="reviews__letter">
+              <a class="reviews__letter-link" href="#!">
+                <img class="reviews__letter-image" src="@img/review-letter.jpg" alt="">
+              </a>
+              <div class="reviews__letter-text-container">
+                <img class="reviews__letter-company-logo" src="@img/spaarman-logo.png" alt="Логотип компании SVP">
+                <p class="reviews__letter-text">Немецкая логистическая компания <b>C. Spaarmann GmbH</b> рекомендует команду Exasystems к сотрудничеству, которая произвела ее успешный переход на удаленный режим работы и снизила расходы на ИТ.</p>
+              </div>
+            </div>
+          </li>
+          <li class="reviews__item">
+            <div class="reviews__letter">
+              <a class="reviews__letter-link" href="#!">
+                <img class="reviews__letter-image" src="@img/review-letter.jpg" alt="">
+              </a>
+              <div class="reviews__letter-text-container">
+                <img class="reviews__letter-company-logo" src="@img/spaarman-logo.png" alt="Логотип компании SVP">
+                <p class="reviews__letter-text">Немецкая логистическая компания <b>C. Spaarmann GmbH</b> рекомендует команду Exasystems к сотрудничеству, которая произвела ее успешный переход на удаленный режим работы и снизила расходы на ИТ.</p>
+              </div>
+            </div>
+          </li>
+        </ul>
       </div>
-    </section>
+    </div>
+  </section>
+  {% include "./blocks/sharing-exp.j2" %}
 {% endblock content %}
 
 {% block modal %}
@@ -118,6 +119,7 @@
 
 {% block js %}
   <script src="./js/consult-with-eng.min.js"></script>
+  <script src="./js/sharing-exp.min.js"></script>
   <script src="./js/macy.min.js"></script>
   <script src="./js/cases.min.js"></script>
   <script src="./js/modal-image.min.js"></script>
