сделал секцию с формой по консультации с инженером

--- a/src/views/pages/index.j2
+++ b/src/views/pages/index.j2
@@ -111,6 +111,7 @@
     </div>
   </section>
   {% include "./blocks/sharing-exp.j2" %}
+  {% include "./blocks/consultation.j2" %}
 {% endblock content %}
 
 {% block modal %}
@@ -120,6 +121,7 @@
 {% block js %}
   <script src="./js/consult-with-eng.min.js"></script>
   <script src="./js/sharing-exp.min.js"></script>
+  <script src="./js/engineer-cons.min.js"></script>
   <script src="./js/macy.min.js"></script>
   <script src="./js/cases.min.js"></script>
   <script src="./js/modal-image.min.js"></script>
