--- a/src/scss/blocks/form.scss
+++ b/src/scss/blocks/form.scss
@@ -32,6 +32,11 @@
   color: #ffffff;
 }
 
+.form__label-text--black {
+  color: $black-color;
+  opacity: 0.7;
+}
+
 .form__field {
   padding: 11px 12px;
 
