--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -52,7 +52,9 @@
 @import "./blocks/our-advantages.scss";
 @import "./blocks/reviews.scss";
 @import "./blocks/vendors.scss";
+@import "./blocks/form-section.scss";
 @import "./blocks/need-help.scss";
+@import "./blocks/consultation.scss";
 @import "./blocks/equipment-card.scss";
 @import "./blocks/import-replacement.scss";
 @import "./blocks/filter.scss";
