--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -69,3 +69,4 @@
 @import "./blocks/services.scss";
 @import "./blocks/equipment.scss";
 @import "./blocks/sharing-exp.scss";
+@import "./blocks/work-with-us.scss";
