--- a/src/views/pages/index.j2
+++ b/src/views/pages/index.j2
@@ -112,6 +112,7 @@
   </section>
   {% include "./blocks/sharing-exp.j2" %}
   {% include "./blocks/consultation.j2" %}
+  {% include "./blocks/work-with-us.j2" %}
 {% endblock content %}
 
 {% block modal %}
