--- a/src/views/header.j2
+++ b/src/views/header.j2
@@ -86,7 +86,7 @@
     {% if (page == "index") %}
       <div class="index-header">
         <h1 class="index-header__title">Поставляем <span>оборудование</span>, внедряем <span>IT&#8209;решения</span></h1>
-        <button class="button index-header__button" type="button">Получить консультацию</button>
+        <button class="button index-header__button rcv-cons-button" type="button">Получить консультацию</button>
       </div>
     {% endif%}
   </div>
