убрал кнопки с карточек услуг и сделал их ссылками

--- a/src/views/blocks/services.j2
+++ b/src/views/blocks/services.j2
@@ -5,79 +5,67 @@
       <ul class="services__list">
         <li class="services__item">
           <div class="service-card service-card--support">
+            <a class="service-card__back-link" href="#!"></a>
             <div class="service-card__content">
-              <h3 class="service-card__title">
-                <a class="service-card__title-link" href="#!">Техническая поддержка</a>
-              </h3>
+              <h3 class="service-card__title">Техническая поддержка</h3>
               <p class="service-card__description">
                 Небольшой текст об услуге. Прежде всего, разбавленное изрядной долей эмпатии, рациональное мышление говорит о возможностях направлений.
               </p>
-              <button class="service__card-button button" type="button">Заказать услугу</button>
             </div>
           </div>
         </li>
         <li class="services__item">
           <div class="service-card service-card--servers">
+            <a class="service-card__back-link" href="#!"></a>
             <div class="service-card__content">
-              <h3 class="service-card__title">
-                <a class="service-card__title-link" href="#!">Серверная ИТ-инфраструктура</a>
-              </h3>
+              <h3 class="service-card__title">Серверная ИТ-инфраструктура</h3>
               <p class="service-card__description">
                 Небольшой текст об услуге. Прежде всего, разбавленное изрядной долей эмпатии, рациональное мышление говорит о возможностях направлений.
               </p>
-              <button class="service__card-button button" type="button">Заказать услугу</button>
             </div>
           </div>
         </li>
         <li class="services__item">
           <div class="service-card service-card--tele-systems">
+            <a class="service-card__back-link" href="#!"></a>
             <div class="service-card__content">
-              <h3 class="service-card__title">
-                <a class="service-card__title-link" href="#!">Телекоммуникаци-онные системы</a>
-              </h3>
+              <h3 class="service-card__title">Телекоммуникаци-онные системы</h3>
               <p class="service-card__description">
                 Небольшой текст об услуге. Прежде всего, разбавленное изрядной долей эмпатии, рациональное мышление говорит о возможностях направлений.
               </p>
-              <button class="service__card-button button" type="button">Заказать услугу</button>
             </div>
           </div>
         </li>
         <li class="services__item">
           <div class="service-card service-card--it-consulting">
+            <a class="service-card__back-link" href="#!"></a>
             <div class="service-card__content">
-              <h3 class="service-card__title">
-                <a class="service-card__title-link" href="#!">ИТ-консалтинг</a>
-              </h3>
+              <h3 class="service-card__title">ИТ-консалтинг</h3>
               <p class="service-card__description">
                 Небольшой текст об услуге. Прежде всего, разбавленное изрядной долей эмпатии, рациональное мышление говорит о возможностях направлений.
               </p>
-              <button class="service__card-button button" type="button">Заказать услугу</button>
             </div>
           </div>
         </li>
         <li class="services__item">
           <div class="service-card service-card--eng-systems">
+            <a class="service-card__back-link" href="#!"></a>
             <div class="service-card__content">
-              <h3 class="service-card__title">
-                <a class="service-card__title-link" href="#!">Инженерные системы</a>
-              </h3>
+              <h3 class="service-card__title">Инженерные системы</h3>
               <p class="service-card__description">
                 Небольшой текст об услуге. Прежде всего, разбавленное изрядной долей эмпатии, рациональное мышление говорит о возможностях направлений.
               </p>
-              <button class="service__card-button button" type="button">Заказать услугу</button>
             </div>
           </div>
         </li>
         <li class="services__item">
           <div class="service-card service-card--safe-region">
+            <a class="service-card__back-link" href="#!"></a>
             <div class="service-card__content">
-              <h3 class="service-card__title">
-                <a class="service-card__title-link" href="#!">Безопасный регион</a>
-              </h3>
+              <h3 class="service-card__title">Безопасный регион</h3>
               <p class="service-card__description">
                 Небольшой текст об услуге. Прежде всего, разбавленное изрядной долей эмпатии, рациональное мышление говорит о возможностях направлений.
               </p>
-              <button class="service__card-button button" type="button">Заказать услугу</button>
             </div>
           </div>
         </li>
