--- a/src/scss/blocks/service-card.scss
+++ b/src/scss/blocks/service-card.scss
@@ -1,4 +1,6 @@
 .service-card {
+  position: relative;
+  z-index: 1;
   height: 370px;
   padding: 30px 35px 43px 35px;
   background-color: $bg2-color;
@@ -15,10 +17,55 @@
   }
 
   &:hover {
-    & .service__card-button {
+    & .service-card__title {
+      color: $blue-color;
+    }
+  }
+  &:active {
+    opacity: 0.9;
+  }
+
+  &::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: -1;
+
+    width: 100%;
+    height: 100%;
+
+    background-color: transparentize($aqua-color, 0.9);
+
+    transition: 0.3s linear;
+
+    clip-path: circle(0 at left top);
+  }
+
+  &:hover {
+    &::before {
+      clip-path: circle(330px at left top);
+    }
+
+    & .equipment-card__button {
       visibility: visible;
       opacity: 1;
     }
+  }
+}
+.service-card__back-link {
+  position: absolute;
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  z-index: 1;
+  text-decoration: none;
+  color: inherit;
+
+  &:focus-visible {
+    outline: 2px solid $blue-color;
+    border-radius: 2px;
   }
 }
 .service-card__content {
@@ -34,28 +81,10 @@
   font-weight: 500;
   font-size: 28px;
   line-height: 110%;
-  cursor: pointer;
+  transition: color 0.3s ease;
 
   @media (min-width: $tablet-width) {
     margin-bottom: 25px;
-  }
-}
-.service-card__title-link {
-  display: inline-flex;
-  text-decoration: none;
-  color: inherit;
-  font-family: inherit;
-  transition: color 0.3s ease;
-
-  &:hover {
-    color: $blue-color;
-  }
-  &:focus-visible {
-    outline: 2px solid $blue-color;
-    border-radius: 2px;
-  }
-  &:active {
-    opacity: 0.7;
   }
 }
 .service-card__description {
