заменил png на webp в карточках

--- a/src/scss/blocks/index-header.scss
+++ b/src/scss/blocks/index-header.scss
@@ -5,7 +5,7 @@
   padding-top: 30px;
   min-height: 580px;
   overflow: hidden;
-  background-image: url("@img/index-header-bg.png");
+  background-image: url("@img/index-header-bg.webp");
   background-repeat: no-repeat;
   background-position: -100px 70px;
 
