--- a/src/views/blocks/equipment.j2
+++ b/src/views/blocks/equipment.j2
@@ -28,7 +28,11 @@
                 </li>
               </ul>
             </div>
-            <img class="equipment-card__image equipment-card__image--servers" src="@img/equipment-card-servers.png" alt="">
+            <picture>
+              <source type="image/webp" srcset="@img/equipment-card-servers.webp 1x">
+              <img class="equipment-card__image equipment-card__image--servers" src="@img/equipment-card-servers.png" alt="">
+            </picture>
+            {# <img class="equipment-card__image equipment-card__image--servers" src="@img/equipment-card-servers.png" alt=""> #}
           </div>
         </li>
         <li class="equipment__big-cards-item">
@@ -59,7 +63,10 @@
                 </li>
               </ul>
             </div>
-            <img class="equipment-card__image equipment-card__image--servers" src="@img/equipment-card-servers-sapreparts.png" alt="">
+            <picture>
+              <source type="image/webp" srcset="@img/equipment-card-servers-sapreparts.webp 1x">
+              <img class="equipment-card__image equipment-card__image--servers" src="@img/equipment-card-servers-sapreparts.png" alt="">
+            </picture>
           </div>
         </li>
         <li class="equipment__big-cards-item">
@@ -93,7 +100,10 @@
                 </li>
               </ul>
             </div>
-            <img class="equipment-card__image equipment-card__image--network" src="@img/equipment-card-network.png" alt="">
+            <picture>
+              <source type="image/webp" srcset="@img/equipment-card-network.webp 1x">
+              <img class="equipment-card__image equipment-card__image--network" src="@img/equipment-card-network.png" alt="">
+            </picture>
           </div>
         </li>
         <li class="equipment__big-cards-item">
@@ -121,7 +131,10 @@
                 </li>
               </ul>
             </div>
-            <img class="equipment-card__image equipment-card__image--soft" src="@img/equipment-card-soft.png" alt="">
+            <picture>
+              <source type="image/webp" srcset="@img/equipment-card-soft.webp 1x">
+              <img class="equipment-card__image equipment-card__image--soft" src="@img/equipment-card-soft.png" alt="">
+            </picture>
           </div>
         </li>
       </ul>
@@ -157,7 +170,10 @@
                 </li>
               </ul>
             </div>
-            <img class="equipment-card__image equipment-card__image--data-save-systems" src="@img/equipment-card-data-save-systems.png" alt="">
+            <picture>
+              <source type="image/webp" srcset="@img/equipment-card-data-save-systems.webp 1x">
+              <img class="equipment-card__image equipment-card__image--data-save-systems" src="@img/equipment-card-data-save-systems.png" alt="">
+            </picture>
           </div>
         </li>
         <li class="equipment__mini-cards-item">
@@ -179,7 +195,10 @@
                 </li>
               </ul>
             </div>
-            <img class="equipment-card__image equipment-card__image--data-protect-systems" src="@img/equipment-card-data-protect-systems.png" alt="">
+            <picture>
+              <source type="image/webp" srcset="@img/equipment-card-data-protect-systems.webp 1x">
+              <img class="equipment-card__image equipment-card__image--data-protect-systems" src="@img/equipment-card-data-protect-systems.png" alt="">
+            </picture>
           </div>
         </li>
         <li class="equipment__mini-cards-item">
@@ -207,7 +226,10 @@
                 </li>
               </ul>
             </div>
-            <img class="equipment-card__image equipment-card__image--server-closets" src="@img/equipment-card-server-closets.png" alt="">
+            <picture>
+              <source type="image/webp" srcset="@img/equipment-card-server-closets.webp 1x">
+              <img class="equipment-card__image equipment-card__image--server-closets" src="@img/equipment-card-server-closets.png" alt="">
+            </picture>
           </div>
         </li>
       </ul>
